# Resurrect

./: .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
Include/Resurrect/: Resurrect.hpp  Window.hpp
Resurrect/: CMakeLists.txt
Resurrect/Include/Resurrect/: Instance.hpp  Resurrect.hpp
Resurrect/Source/: Instance.cpp  Main.cpp  Window.cpp
Source/: Window.cpp
